[package]
name = "calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
tokio = { version = "1.15", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"
bincode = "1.3"
image = "0.23"
imageproc ="0.22"
rusttype = "0.9"
reqwest = { version = "0.11", features = [ "json","gzip","brotli","rustls-tls"], default-features = false }
lunardate = "0.2"
