[package]
name = "warp-calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calendar = {path = "../calendar"}
warp = {version = "0.3",features = ["default"]}
futures-util = "0.3"
tokio = { version = "1.15", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }


[profile.release]
lto = true
